# AI-Singing-Align-Mix

./: .gitignore  README.md  ai_singing_app.ipynb  align.py  benchmark.py  denoise.py  main.py  mix_check.py  mixing.py  pyproject.toml
